--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,194 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,500&display=swap');
+
+body{
+  font-family: 'Rubik', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/*home*/
+.org{
+position: relative;
+overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+
+.layer{
+position: absolute;
+height: 100%;
+width: 100%;
+transition: 0.4s ease-in;
+top: 0;
+}
+
+.layer:hover{
+   background-color: rgba(145, 65, 65, 0.63);
+}
+
+.layer h5{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  transition: 0.4s;
+
+}
+
+
+.layer:hover h5{
+  transform: translateY(-500%);
+}
+
+
+
+
+/*Products*/
+.display-product{
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+ row-gap:20px;
+
+}
+
+
+.orgs{
+  position: relative;
+  overflow: hidden;
+
   }
+  
+  .layers{
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  transition: 0.3s;
+  top: 0;
+  }
+  
+  .layers:hover{
+     background-color: rgba(145, 65, 65, 0.63);
+  }
+  
+  .layers h5{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    transition: 0.3s;
+    background-color: rgb(233, 243, 252);
+   
+  }
+  
+  
+  .layers:hover h5{
+    transform: translateY(-300%);
+  }
+
+.display-menu{
+
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  gap: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.imgs{
+width: 25rem;
+height: 13rem;
+}
+
+
+/*footer*/
+
+  .ft{
+    display: flex;
+    list-style: none;
+   flex-direction: column;
+   text-align: left;
+
+}
+
+.ft li{
+    padding: 10px;
+}
+
+/*productdetails*/
+
+.rate{
+  display: inline-block;
+  background-color: green;
+  border-radius:5px ;
+}
+
+
+.cat{
+  text-transform: uppercase;
+  opacity: 0.5;
+}
+
+
+.price{
+font-size: 40px;
+}
+
+
+.desp{
+line-height: 1.2;
+
+}
+
+.cartbtn{
+ font-size: 20px;
+}
+
+
+/*cart*/
+
+.total{
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.counter{
+  display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.count{
+  padding:0px 13px ;
+}
+
+
+/*login*/
+
+
+.login-card{
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  height: 70vh;
+}
+
+
+.input{
+  border-top: 0px;
+  border-left: 0px; 
+  border-right: 0px;
+}
+
+.display-btn{
+   
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ flex-direction: column;
+}
+
+.login-btn {
+  padding: 12px 110px;
+  background-color:rgb(249,101,44);
+font-weight: 500;
+}
+
+.signs-btn {
+  padding: 12px 55px;
+  background-color: white;
+  font-weight: 500;
+  box-shadow: 0px 0px 10px 0.5px rgb(223, 222, 222);
 }
