--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@ overflow: hidden;
 position: absolute;
 height: 100%;
 width: 100%;
-transition: 0.4s ease-in;
+transition: 0.3s ease-in;
 top: 0;
 }
 
@@ -28,7 +28,7 @@ top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  transition: 0.4s;
+  transition: 0.3s;
 
 }
 
@@ -45,8 +45,9 @@ top: 0;
   display: grid;
   grid-template-columns: repeat(4,1fr);
  row-gap:20px;
-
+ column-gap: 10px;
 }
+
 
 
 .orgs{
@@ -83,16 +84,77 @@ top: 0;
   }
 
 .display-menu{
-
   display: grid;
   grid-template-columns: repeat(4,1fr);
   gap: 10px;
 }
 
+
+
+
 .imgs{
 width: 25rem;
 height: 13rem;
 }
+
+
+
+
+
+ 
+
+@media (max-width:1155px){
+  .display-menu{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 10px;
+  }
+  .imgs{
+    width: 100%;
+    height: 20rem;
+  }
+}
+
+
+@media (max-width:1155px){
+  
+  .display-product{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    row-gap:20px;
+    column-gap: 10px;
+  }
+  
+  
+}
+
+
+@media (max-width:900px){
+ .display-product{
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+ row-gap:20px;
+ column-gap: 10px;
+
+}
+
+}
+
+@media (max-width:800px){
+  .display-menu{
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    gap: 10px;
+  }
+  .imgs{
+    width: 100%;
+    height: 27rem;
+  }
+ 
+ }
+
+
+
 
 
 /*footer*/
