--- a/src/App.css
+++ b/src/App.css
@@ -245,7 +245,7 @@ height: 200px;
 
 .login-card{
   display: grid;
-  grid-template-columns: 2fr 2fr;
+  grid-template-columns: 3fr 3fr;
   height: 70vh;
 }
 
@@ -274,7 +274,7 @@ height: 200px;
 font-weight: 500;
 }
 
-.signs-btn {
+.existing {
   padding: 12px 55px;
   background-color: white;
   font-weight: 500;
@@ -283,9 +283,13 @@ font-weight: 500;
 
 @media (max-width:1270px){
   .login-btn {
-    padding: 12px 70px;
+    padding: 12px 83px;
     background-color:rgb(249,101,44);
   font-weight: 500;
+  }
+  .existing {
+    padding: 12px 30px;
+
   }
    
 }
@@ -295,24 +299,44 @@ font-weight: 500;
 @media (max-width:1000px){
   .login-card{
     display: grid;
-  grid-template-columns: 1fr;
-  height: 100vh;
+  grid-template-columns: 1fr 3fr;
+  height: 70vh;
   }
   .login-btn {
     padding: 12px 110px;
-    background-color:rgb(249,101,44);
-  font-weight: 500;
+
   }
+  .existing {
+    padding: 12px 55px;
+  } 
 
   
 }
 
-@media (max-width:650px){
+
+@media (max-width:800px){
+  .login-card{
+    display: grid;
+  grid-template-columns: 1fr 2fr;
+  height: 70vh;
+  }
   .login-btn {
-    padding: 12px 50px;
-    background-color:rgb(249,101,44);
-  font-weight: 500;
+    padding: 8px 70px;
+
+  }
+  .newtext{
+    font-size: 12px;
+  }
+  .existing {
+    padding: 12px 16px;
+  } 
+  .or{
+    font-size: 13px;
   }
    
 }
+
+
+
+
 
