--- a/src/App.css
+++ b/src/App.css
@@ -274,6 +274,15 @@ height: 200px;
 font-weight: 500;
 }
 
+.login-text-sec{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+
+}
+
+
 .existing {
   padding: 12px 55px;
   background-color: white;
